# musdk-marvell

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  LICENSE  Makefile  Makefile.am  README  aarch64-poky-config.sub  autogen.sh  bootstrap  configure.ac  license.txt  localversion
apps/: .gitignore  Makefile.am
apps/common/: giu_utils.c  mvapp.c  nmp_guest_utils.c  pp2_utils.c  sam_utils.c  utils.c
apps/common/crypto/: mv_sha1.c
apps/common/lib/: cli.c  ezxml.c  mv_stack.c  perf_mon_emu.c  xxhash.c
apps/examples/: Makefile.am  hello.c
apps/examples/giu/: Makefile.am
apps/examples/giu/agnic_pkt_echo/: pkt_echo.c
apps/examples/giu/pkt_echo/: musdk-nmp-config.txt  pkt_echo.c
apps/examples/neta/: Makefile.am  neta_utils.c  neta_utils.h
apps/examples/neta/crypto_echo/: crypto_echo.c
apps/examples/neta/pkt_echo/: pkt_echo.c
apps/examples/nmp/: Makefile.am
apps/examples/nmp/configs/: musdk-nmp-config.txt  musdk-no-pp2-nmp-config.txt  musdk-vfs-nmp-config.txt  musdk-vfs-nmp-multi-cp-config.txt  musdk-vfs-nmp-single-cp-config.txt  nmp-1bp-config.txt  nmp-config.txt  nmp-no-pp2-1bp-config.txt  odp-nmp-config.txt
apps/examples/nmp/nmp_standalone/: nmp_standalone.c
apps/examples/ppv2/: Makefile.am  cls_debug.c  cls_debug.h  cls_demo.c
apps/examples/ppv2/cls_example/: cls_filter_example.c  cls_logical_port_example.c  cls_main_example.c  cls_main_example.h  cls_policer_example.c  cls_qos_example.c  cls_tables_example.c  cls_txsched_example.c
apps/examples/ppv2/crypto_echo/: crypto_echo.c
apps/examples/ppv2/dma_echo/: dma_echo.c
apps/examples/ppv2/ks/: Kbuild  ks_pkt_echo.c
apps/examples/ppv2/pkt-echo/: odp_bridge.c  pkt-echo.c  pkt_echo.c
apps/examples/ppv2/pkt_echo/: pkt_echo.c
apps/examples/ppv2/pkt_gen/: pkt_gen.c
apps/examples/ppv2/pkt_l3fwd/: byteorder_inlines.h  l3fwd_db.c  l3fwd_db.h  l3fwd_lpm.c  (+2 more)
apps/include/: cli.h  giu_utils.h  mv_aes.h  mv_sha2.h  mv_stack.h  mvapp.h  mvapp_std.h  nmp_guest_utils.h  perf_mon_emu.h  pp2_utils.h  sam_utils.h  utils.h  xxhash.h
apps/tests/: Makefile.am  dma_mem.c  dmax2_dma_test.c
apps/tests/ppv2/: cls-dbg.c  cls_debug.c  cls_debug.h  cls_demo.c  egress_scheduler.c  pp2_tests_main.c  pp2_tests_main.h
apps/tests/sam_kat_single/: kat_ipsec_single.c  kat_ssltls_single.c  kat_tests_single.c
apps/tests/sam_kat_suite/: 3des_tests.txt  aes_1440_multi.txt  aes_chain_test.txt  aes_cmac128.txt  aes_cmac192.txt  aes_cmac256.txt  aes_ctr.txt  aes_gcm.txt  aes_gmac.txt  aes_sha1_1440_multi.txt  aes_sha1_multi.txt  aes_tests.txt  array.c  array.h  common.c  common.h  encryptedBlock.c  encryptedBlock.h  fileSets.c  fileSets.h  generic_list.c  generic_list.h  hash_only.txt  hmac_tests.txt  hmac_tests_large.txt  kat_tests.c
src/: .gitignore  Makefile.am  libmusdk.pc.in
src/drivers/agnic/: agnic_pfio.c  agnic_pfio.h  agnic_pfio_hw.h  agnic_pfio_mng.c
src/drivers/dmax2/: dmax2.c  dmax2.h  dmax2_mem.c
src/drivers/giu/: crc.h  file_map.c  file_map.h  giu.c  giu_bpool.c  giu_gpio.c  giu_internal.h  giu_queue_topology.c  giu_queue_topology.h
src/drivers/mqa/: mqa.c  mqa_internal.h  mqa_queue.c
src/drivers/neta/: neta.c  neta_bm.c  neta_bm.h  neta_hw.c  neta_hw.h  neta_port_us.c  neta_ppio.c  neta_ppio.h
src/drivers/ppv2/: Makefile.am  bpool.c  cls.c  hif.c  hif.h  libtool-version  mv_pp2x_hw_type.h  pp2.c  pp2.h  pp2_bm.c  pp2_bm.h  pp2_bpool.c  pp2_bpool.h  pp2_cls.c  pp2_cma.c  pp2_cma.h  pp2_dm.c  pp2_dm.h  pp2_gop.c  pp2_gop.h  pp2_gop_dbg.c  pp2_gop_dbg.h  pp2_gop_def.h  pp2_hardcodes.h  pp2_hif.c  pp2_hif.h  pp2_hw_cls.c  pp2_hw_cls.h  pp2_hw_cls_dbg.c  pp2_hw_cls_dbg.h  pp2_hw_type.h  pp2_ks.c  pp2_mem.c  pp2_mem.h  pp2_plat.h  pp2_port.c  pp2_port.h  pp2_port_ks.c  pp2_port_us.c  pp2_ppio.c  (+10 more)
src/drivers/sam/: sam.c  sam.h  sam_debug.c  sam_hw.c  sam_hw.h  sam_ipsec.c  sam_ssltls.c
src/env/: cma.c  cma.h  hugepage_mem.c  hugepage_mem.h  log.c  netdev.c  of.c  of.sh  of_sh.h  spinlock.c  sys_dma.c  sys_dma_ks.c  sys_event.c  sys_event_ks.c  sys_iomem.c  sys_iomem_ks.c  trace.c
src/hw_emul/gie/: gie.c  gie_buff_desc.h
src/include/: list.h  mv_net.h  mv_std.h  mvstd.h  of.h  std.h  std_internal.h  sys_dma.h  sys_io.h
src/include/drivers/: giu_internal.h  giu_regfile_def.h  mqa_def.h  mv_agnic_pfio.h  mv_dmax2.h  mv_giu.h  mv_giu_bpool.h  mv_giu_gpio.h  mv_giu_gpio_init.h  mv_mqa.h  mv_mqa_queue.h  mv_net.h  mv_neta.h  mv_neta_bpool.h  mv_neta_ppio.h  mv_pp2.h  mv_pp2_bpool.h  mv_pp2_cls.h  mv_pp2_hif.h  mv_pp2_ppio.h  mv_sam.h  mv_sam_cio.h  mv_sam_session.h
src/include/env/: cma.h  io.h  mv_autogen_build_assert.h.in  mv_autogen_comp_flags.h.in  mv_common.h  mv_compiler.h  mv_debug.h  mv_errno.h  mv_io.h  mv_of.h  mv_sys_dma.h  mv_sys_event.h  mv_types.h  netdev.h  of.h  spinlock.h  sys_iomap.h  sys_iomem.h  xflags.h
src/include/hw_emul/: gie.h
src/include/int/: alloc.h  cmplr.h  dbg.h  delay.h  errno.h  gen.h  io.h  spinlock.h  sys_misc.h  types.h  xflags.h
src/include/lib/: file_utils.h  id_alloc.h  lib_misc.h  list.h  list_ks.h  mem_mng.h  misc.h  mv_aes.h  mv_md5.h  mv_pme.h  mv_sha1.h  mv_sha2.h  net.h  of.h  uio_helper.h
src/include/mng/: mv_nmp.h  mv_nmp_dispatch.h  mv_nmp_guest.h  mv_nmp_guest_giu.h  mv_nmp_guest_msg.h  mv_nmp_guest_pp2_cls.h
src/lib/: file_utils.c  lib_misc.c  list.c  mem_mng.c  misc.c  perf_mon_emu.c
src/lib/crypto/: mv_aes.c  mv_md5.c  mv_sha1.c  mv_sha2.c
src/lib/of/: of.c  of.sh
src/lib/uio/: uio_find_devices.c  uio_find_devices_byname.c  uio_find_mem_byname.c  uio_free.c  uio_get_all_info.c  uio_get_device_attributes.c  uio_get_event_count.c  uio_get_mem_addr.c  uio_get_mem_name.c  uio_get_mem_size.c  uio_get_name.c  uio_get_version.c  uio_line_from_file.c  uio_num_from_filename.c  uio_single_mmap.c  uio_utils.c
src/mng/: db.c  db.h  dev_mng.c  dev_mng.h  dev_mng_pp2.c  dev_mng_pp2.h  dispatch.c  dispatch.h  nmp.c  nmp_guest.c  nmp_guest.h  nmp_guest_giu.c  nmp_guest_pp2_cls.c  pci_ep_def.h
src/mng/include/: guest_mng_cmd_desc.h
src/mng/lf/: lf_mng.c  lf_mng.h  mng_cmd_desc.h
src/sys/: cma.c  cma.h  mem_mng.c  mem_mng.h  sys_dma.c  sys_spinlock.c
(+337 files in other folders)
